<resources>
    <string name="app_name">BansosApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_selamat_datang">SELAMAT DATANG</string>
    <string name="tv_nama_pengguna">OCTAVIAN</string>
    <string name="dummy_date">Senin, 20 Jun 2021</string>
    <string name="dummy_note">Semoga Usahamu Berhasil..</string>
    <string name="content_header">Logo Header</string>
    <string name="title_list_bansos">Bansos Tersedia</string>
    <string name="title_card_bansos">Bantuan Uang Tunai</string>
    <string name="desc_card_bansos">Bantuan Dari Pemerintah Berupa Uang tunai senilai Rp.1000.000</string>
    <string name="content_list_bansos">Image Bansos</string>
    <string name="title_bansos">Bantuan Uang Tunai</string>
    <string name="waktu_berlaku_bansos">Berlaku:</string>
    <string name="waktu_bansos">Januari 2021 - Maret 2021</string>
    <string name="title_jenis_bansos">Anda akan mendapatkan:</string>
    <string name="jenis_bansos">- Uang Tunai</string>
    <string name="jumlah_bansos">Rp. 1.000.000</string>
    <string name="persyaratan_bansos">Persyaratan :</string>
    <string name="title_ketentuan_bansos">Ketentuan Bansos :</string>
    <string name="ajukan_bansos">ajukan Bansos</string>
    <string name="error_message">Sepertinya ada kesalahan di penyimpanan kami, Silahkan ulangi proses kembali</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="maintenancelogo">MaintenanceLogo</string>
    <string name="ambil_gambar">Ambil Gambar</string>
</resources>