<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.DetailPageFragment">

    <!--    HEADER SECTION -->
    <ImageView
        android:id="@+id/img_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/imagebansos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    END HEADER SECTION -->

    <!--    CONTENT -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/homepage_background"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_banner">

        <!--        CONTENT BANSOS TITLE -->
        <TextView
            android:id="@+id/tv_title_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_start_margin"
            android:layout_marginTop="@dimen/margin"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_bansos"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_waktu_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/waktu_berlaku_bansos"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_bansos"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_bansos"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_waktu_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/waktu_bansos"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/tv_title_waktu_bansos"
            app:layout_constraintTop_toBottomOf="@id/tv_title_bansos"
            tools:ignore="SmallSp" />

        <!--        END BANSOS TITLE-->
        <!--        BANSOS BENEFITS-->
        <TextView
            android:id="@+id/tv_title_total_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_start_margin"
            android:layout_marginTop="@dimen/margin"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_jenis_bansos"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_waktu_bansos" />

        <TextView
            android:id="@+id/tv_jenis_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/jenis_bansos"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_total_bansos"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_total_bansos" />

        <TextView
            android:id="@+id/tv_total_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/jumlah_bansos"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_jenis_bansos"
            app:layout_constraintTop_toBottomOf="@id/tv_title_total_bansos" />

        <!--        END BANSOS BENEFITS-->

        <!--        BANSOS PERSYARATAN -->
        <TextView
            android:id="@+id/tv_title_persyaratan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_start_margin"
            android:layout_marginTop="@dimen/margin"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/persyaratan_bansos"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_bansos" />

        <TextView
            android:id="@+id/tv_list_persyaratan1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="- KTP"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_persyaratan"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_persyaratan" />

        <TextView
            android:id="@+id/tv_list_persyaratan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="- KK"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_persyaratan"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_persyaratan1" />

        <TextView
            android:id="@+id/tv_list_persyaratan3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="- SKTM"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_persyaratan"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_persyaratan2" />

        <TextView
            android:id="@+id/tv_list_persyaratan4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="- REKOMENDASI RT"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_persyaratan"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_persyaratan3" />

        <TextView
            android:id="@+id/tv_list_persyaratan5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="- REKOMENDASI RW"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_persyaratan"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_persyaratan4" />

        <!--        END BANSOS PERSYARATAN -->

        <!--        BANSOS KETENTUAN -->
        <TextView
            android:id="@+id/tv_title_ketentuan_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_start_margin"
            android:layout_marginTop="@dimen/margin"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_ketentuan_bansos"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_persyaratan5" />

        <TextView
            android:id="@+id/tv_ketentuan_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:padding="@dimen/padding_md"
            android:text="Penerima hanya dapat mengajukan 1 kali, penerima tidak dapat mengajukan kembali jika sudah berhasil mendapatkan bansos"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_ketentuan_bansos"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_ketentuan_bansos" />

        <!--        END BANSOS KETENTUAN-->

        <Button
            android:id="@+id/btn_ajukan_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal"
            android:text="@string/ajukan_bansos"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ketentuan_bansos" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--END CONTENT-->

</androidx.constraintlayout.widget.ConstraintLayout>