<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.home.HomePage">

    <!--    HEADER SECTION-->

    <TextView
        android:id="@+id/tv_note_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/dummy_note"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/tv_header_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_header" />

    <TextView
        android:id="@+id/tv_header_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/header_selamat_datang"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_header_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_header_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tv_nama_pengguna"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_date_header"
        app:layout_constraintStart_toStartOf="@+id/tv_header_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_welcome" />

    <TextView
        android:id="@+id/tv_date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/dummy_date"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_note_header"
        app:layout_constraintStart_toStartOf="@+id/tv_header_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_username" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/content_header"
        android:src="@drawable/shakehand"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    END HEADER SECTION-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/homepage_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_header">

        <TextView
            android:id="@+id/tv_title_list_bansos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_list_bansos"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/rv_list_bansos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_title_list_bansos2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Riwayat Pengajuan"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/card_riwayat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_list_bansos" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_bansos"
            android:layout_width="310dp"
            android:layout_height="230dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_list_bansos2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_title_list_bansos"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_list_bansos"
            tools:listitem="@layout/item_list_bansos" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/view_error"
            layout="@layout/view_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_riwayat"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rv_list_bansos"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/rv_list_bansos"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_list_bansos2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_qr_terdaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.529"
                    app:srcCompat="@drawable/file" />

                <TextView
                    android:id="@+id/tv_status_terdaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Sedang Diajukan"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_lihat_qr_terdaftar"
                    app:layout_constraintStart_toEndOf="@+id/img_qr_terdaftar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <Button
                    android:id="@+id/btn_lihat_qr_terdaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Lihat QR Code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_status_terdaftar"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_terdaftar" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>